--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -23,6 +23,6 @@ ADD ./nuclei-sap-templates/ /tools/nuclei-sap-templates
 
 # Final Setup
 RUN alias ll='ls -la'
-ENV PS1='sap-attack-surface:\w\$ '
+ENV PS1='\e[0;32m\u@sap-attack-surface\e[m:\e[1;33m\w\e[m\n\$ '
 WORKDIR /work
 ENTRYPOINT ["/bin/bash"]
