automatically include tools into container

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -16,10 +16,11 @@ RUN git clone --depth=1 https://github.com/gelim/nmap-erpscan.git /tools/nmap-er
 # Setup nuclei & install default templates
 RUN VERSION=$(curl -s https://api.pdtm.sh/api/v1/tools/nuclei | jq '.tools[0]["version"]' | tr -d '"') && \
     wget -q "https://github.com/projectdiscovery/nuclei/releases/download/v$VERSION/nuclei_$(echo $VERSION)_linux_amd64.zip" -O /tmp/nuclei.zip && \
-    unzip /tmp/nuclei.zip -d /tools/.bin/ && rm /tmp/nuclei.zip && nuclei -ut
+    unzip /tmp/nuclei.zip -d /tools/.bin/ && rm /tmp/nuclei.zip && rm -rf /tools/.bin/*.md && nuclei -ut
 
 # Setup nuclei-sap-templates
 ADD ./nuclei-sap-templates/ /tools/nuclei-sap-templates
+ADD ./tools/ /tools/
 
 # Final Setup
 RUN alias ll='ls -la'
