update github workflow

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -43,5 +43,5 @@ jobs:
           context: .
           push: true
           file: ./container/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: sap-attack-surface-discovery:latest
           labels: ${{ steps.meta.outputs.labels }}
