--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 
 # Install Packages
-RUN apk add --no-cache nmap nmap-scripts bash py3-pip git libcap jq curl
+RUN apk add --no-cache nmap nmap-scripts wget bash py3-pip git libcap jq curl
 
 # Setup Folder
 RUN mkdir -p /tools/.bin && mkdir -p /tools/nuclei-sap-templates
@@ -15,12 +15,12 @@ RUN git clone --depth=1 https://github.com/gelim/nmap-erpscan.git /tools/nmap-er
 
 # Setup nuclei & install default templates
 RUN VERSION=$(curl -s https://api.pdtm.sh/api/v1/tools/nuclei | jq '.tools[0]["version"]' | tr -d '"') && \
-    curl -s "https://github.com/projectdiscovery/nuclei/releases/download/v$VERSION/nuclei_$(echo $VERSION)_linux_amd64.zip" -o /tmp/nuclei.zip && \
+    wget -q "https://github.com/projectdiscovery/nuclei/releases/download/v$VERSION/nuclei_$(echo $VERSION)_linux_amd64.zip" -O /tmp/nuclei.zip && \
     unzip /tmp/nuclei.zip -d /tools/.bin/ && rm /tmp/nuclei.zip && rm -rf /tools/.bin/*.md && nuclei -ut
 
 # Setup nuclei-sap-templates
 ADD ./nuclei-sap-templates/ /tools/nuclei-sap-templates
-ADD ./tools/ /tools/
+ADD ./tools/ /tools/nuclei-sap-templates
 
 # Final Setup
 RUN alias ll='ls -la'
