--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -43,6 +43,5 @@ jobs:
           context: .
           push: true
           file: ./container/Dockerfile
-          #tags: sap-attack-surface-discovery:latest
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ghcr.io/${{ github.repository_owner }}/sap-attack-surface-discovery:latest
           labels: ${{ steps.meta.outputs.labels }}
