--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -43,5 +43,6 @@ jobs:
           context: .
           push: true
           file: ./container/Dockerfile
-          tags: ghcr.io/${{ github.repository_owner }}/sap-attack-surface-discovery:latest
+          #tags: sap-attack-surface-discovery:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
