--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -21,7 +21,7 @@ RUN VERSION=$(curl -s https://api.pdtm.sh/api/v1/tools/nuclei | jq '.tools[0]["v
 # Setup nuclei-sap-templates
 ADD ./nuclei-sap-templates/ /tools/nuclei-sap-templates
 ADD ./tools/ /tools
-RUN pip3 install -r /tools/requirements.txt
+RUN pip3 install xmltodict
 
 # Final Setup
 RUN alias ll='ls -la'
