--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -1,4 +1,4 @@
-name: build and release a Container image
+name: build and release Container image
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
     paths:
       - 'nuclei-sap-templates/**'
       - 'container/**'
+      - 'tools/**'
 
 env:
   REGISTRY: ghcr.io
