--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -22,12 +22,12 @@ RUN VERSION=$(curl -s https://api.pdtm.sh/api/v1/tools/nuclei | jq '.tools[0]["v
 ADD ./nuclei-sap-templates/ /tools/nuclei-sap-templates
 ADD ./tools/ /tools
 # Install tools requirements
-RUN pip3 install -r /tools/requirements.txt && rm /tools/requirements.txt && chmod +x /tools/*.py
+RUN pip3 install -r /tools/requirements.txt --break-system-packages && rm /tools/requirements.txt && chmod +x /tools/*.py
 
 # Install & setup SAPstart service enumeration tool
 RUN git clone --depth=1 https://github.com/randomstr1ng/sapstartsrv-enumeration/ /tools/sapstartsrv-enumeration && \
     chmod +x /tools/sapstartsrv-enumeration/*.py && \
-    pip3 install -r /tools/sapstartsrv-enumeration/requirements.txt
+    pip3 install -r /tools/sapstartsrv-enumeration/requirements.txt --break-system-packages
 
 # Final Setup
 ENV PS1='\e[0;32m\u@sap-attack-surface\e[m:\e[1;33m\w\e[m\n\$ '
