--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -31,6 +31,11 @@ ADD ./tools/ /tools
 # Install tools requirements
 RUN pip3 install -r /tools/requirements.txt && rm /tools/requirements.txt && chmod +x /tools/*.py
 
+# Install & setup SAPstart service enumeration tool
+RUN git clone --depth=1 https://github.com/randomstr1ng/sapstartsrv-enumeration/ /tools/sapstartsrv-enumeration && \
+    chmod +x /tools/sapstartsrv-enumeration/*.py && \
+    pip3 install -r /tools/sapstartsrv-enumeration/requirements.txt
+
 # Download SAP ICM wordlist
 RUN wget https://raw.githubusercontent.com/rapid7/metasploit-framework/564c3f8e024ad38cdf43fd8cedfb375e731ec787/data/wordlists/sap_icm_paths.txt -O /tools/sap_icm_paths.txt
 
