--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
  && rm -rf /var/lib/apt/lists/*
 
 # Setup Folder
-RUN mkdir -p /tools/.bin && mkdir -p /tools/nuclei-sap-templates
+RUN mkdir -p /tools/.bin && mkdir -p /tools/nuclei-sap-templates && mkdir -p /tools/wordlists
 ENV PATH="${PATH}:/tools/.bin"
 
 # Setup ERPScan Nmap
@@ -28,7 +28,7 @@ RUN VERSION=$(curl -s https://api.pdtm.sh/api/v1/tools/nuclei | jq '.tools[0]["v
 
 # Setup nuclei-sap-templates
 ADD ./nuclei-sap-templates/ /tools/nuclei-sap-templates
-ADD ./tools/ /tools
+ADD ./tools/ /tools/
 
 # Install tools requirements
 RUN pip3 install -r /tools/requirements.txt && rm /tools/requirements.txt && chmod +x /tools/*.py
@@ -39,14 +39,14 @@ RUN wget -q https://bootstrap.pypa.io/pip/2.7/get-pip.py -O /tmp/get-pip.py && p
 # Install & setup SAPstart service enumeration tool
 RUN git clone --depth=1 https://github.com/randomstr1ng/sapstartsrv-enumeration/ /tools/sapstartsrv-enumeration && \
     chmod +x /tools/sapstartsrv-enumeration/*.py && \
-    pip3 install -r /tools/sapstartsrv-enumeration/requirements.txt
+    pip3 install -r /tools/sapstartsrv-enumeration/requirements.txt && mv /tools/sapstartsrv-enumeration/*.py /tools/ && rm -rf /tools/sapstartsrv-enumeration
 
 # Download SAP ICM wordlist
-RUN wget https://raw.githubusercontent.com/rapid7/metasploit-framework/564c3f8e024ad38cdf43fd8cedfb375e731ec787/data/wordlists/sap_icm_paths.txt -O /tools/sap_icm_paths.txt
+RUN wget https://raw.githubusercontent.com/rapid7/metasploit-framework/564c3f8e024ad38cdf43fd8cedfb375e731ec787/data/wordlists/sap_icm_paths.txt -O /tools/wordlists/sap_icm_paths.txt
 
 # Install additional tools
 RUN python3 -m pip install shodan
-RUN python2 -m pip install pysap[examples] && git clone --depth=1 https://github.com/OWASP/pysap.git /tmp/pysap && mv /tmp/pysap/examples /tools/pysap-tools && rm -rf /tmp/pysap
+RUN python2 -m pip install pysap[examples] && git clone --depth=1 https://github.com/OWASP/pysap.git /tmp/pysap && mv /tmp/pysap/examples/*.py /tools/.bin/ && mv /tmp/pysap/examples/* /tools/wordlists/ && rm -rf /tmp/pysap
 
 # Final Setup
 RUN echo "alias ll='ls -al'" > /root/.bashrc
