fix metasploit apt-key issue

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && apt-get install -y \
     python2-dev \
     ffuf \
     vim \
-    masscan \
+#    masscan \
     && curl https://raw.githubusercontent.com/rapid7/metasploit-omnibus/master/config/templates/metasploit-framework-wrappers/msfupdate.erb > /tmp/msfinstall && \
     bash /tmp/msfinstall && rm -rf /tmp/msfinstall && apt-key export 2007B954 | gpg --dearmour -o /etc/apt/trusted.gpg.d/metasploit.gpg && rm -rf /var/lib/apt/lists/*
 
