fix metasploit installation issues

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -13,7 +13,9 @@ RUN apt-get update && apt-get install -y \
     python2-dev \
     ffuf \
     vim \
-#    masscan \
+    masscan \
+    sudo \
+    && curl https://apt.metasploit.com/metasploit-framework.gpg.key | gpg --dearmour -o /etc/apt/trusted.gpg.d/metasploit.gpg \
     && curl https://raw.githubusercontent.com/rapid7/metasploit-omnibus/master/config/templates/metasploit-framework-wrappers/msfupdate.erb > /tmp/msfinstall && \
     bash /tmp/msfinstall && rm -rf /tmp/msfinstall && apt-key export 2007B954 | gpg --dearmour -o /etc/apt/trusted.gpg.d/metasploit.gpg && rm -rf /var/lib/apt/lists/*
 
